Infos sur le README et structure de base du HTML

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Application gestionnaire de tâches</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>Mon tableau gestionnaire de tâches</h1>
+    <button id="ajouter-carte">Ajouter une carte</button>
+    <div id="tableau" class="kanban"></div>
+    <script src="script.js"></script>
+  </body>
 </html>
