Modifications de l'index html et début du script JS

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Mon tableau gestionnaire de tâches</h1>
-    <button id="ajouter-carte">Ajouter une carte</button>
-    <div id="tableau" class="kanban"></div>
+    <button class="ajouter-carte">Ajouter une carte</button>
+    <div class="kanban"></div>
     <script src="script.js"></script>
   </body>
 </html>
