--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>Mon tableau gestionnaire de tâches</h1>
-    <button class="ajouter-carte">Ajouter une carte</button>
+    <button class="ajouter-colonne">Ajouter une colonne</button>
     <div class="kanban"></div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
