Ajout de la page d'accueil HTML et module accueil.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Application gestionnaire de tâches</title>
     <link rel="stylesheet" href="style.css" />
+    <a href="accueil.html">Accueil</a>
   </head>
   <body>
     <h1>Mon tableau gestionnaire de tâches</h1>
