Modifications des classes et ID et modifs du CSS

--- a/accueil.html
+++ b/accueil.html
@@ -9,7 +9,7 @@
   <body>
     <nav><a href="index.html">Accéder au tableau</a></nav>
     <main aria-label="Page d'accueil">
-      <div id="accueil"></div>
+      <div class="accueil"></div>
       <script type="module" src="accueil.js"></script>
     </main>
   </body>
