Dernier push exercice optimisation du code

--- a/accueil.html
+++ b/accueil.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Accueil</title>
+    <title>Accueil - Gestionnaire de tâches Kanban</title>
+    <meta
+      name="description"
+      content="Bienvenue sur votre application de gestion de tâches. Découvrez le tableau Kanban interactif pour organiser vos projets et améliorer votre productivité."
+    />
+    <meta
+      name="keywords"
+      content="kanban, accueil, gestion de tâches, organisation, tableau, productivité"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
