--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tableau Kanban - Application gestionnaire de tâches</title>
+    <meta
+      name="description"
+      content="Organisez vos tâches efficacement grâce à ce tableau Kanban interactif : créez des colonnes, déplacez vos cartes et suivez l'avancement de vos projets."
+    />
+    <meta
+      name="keywords"
+      content="kanban, gestionnaire de tâches, tableau de bord, organisation, productivité, to-do list"
+    />
     <title>Application gestionnaire de tâches</title>
     <link rel="stylesheet" href="style.css" />
   </head>
